ignore the secret files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,16 @@ spring.application.name=DepartmentService
 server.port=8091
 
 ##DataSource###
-spring.datasource.url=jdbc:mysql://host.docker.internal:3307/mydb
+#spring.datasource.url=jdbc:mysql://host.docker.internal:3307/mydb
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/TestDb
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Dkm@88095
 
 ##JPA and Hibernates###
 spring.jpa.hibernate.ddl-auto=update
